logs/chorddb.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/chorddb'...
Listing './lib/python3.5/site-packages/chorddb/chords'...
Compiling './lib/python3.5/site-packages/chorddb/chords/finder.py'...
***   File "./lib/python3.5/site-packages/chorddb/chords/finder.py", line 159
    key=lambda (string, pos): (pos, string),
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chorddb/curses'...
Listing './lib/python3.5/site-packages/chorddb/tab'...
Listing './lib/python3.5/site-packages/chorddb/terminal'...
Compiling './lib/python3.5/site-packages/chorddb/terminal/render.py'...
***   File "./lib/python3.5/site-packages/chorddb/terminal/render.py", line 48
    print colorize("{:8s}:".format(line.type), color.GREEN,
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chorddb/utils'...
Listing './lib/python3.5/site-packages/chorddb-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/test/test_chords'...
Listing './lib/python3.5/site-packages/test/test_tab'...
Listing './lib/python3.5/site-packages/test/test_utils'...
Listing './share'...
Listing './share/python-wheels'...
